fixed contrast

--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,6 @@ form button {
 
 .current a:link {
   background-color: #9c95ff;
-  color: white;
 }
 
 .skip-links{
